2003-09-10 TADA Tadashi <sho@spc.gr.jp>
	* blog_style.rb: support to getnerate new date in Append mode.
	* tdiary.conf.sample_ja: update referer_table.

2003-08-22 TADA Tadashi <sho@spc.gr.jp>
	* title-navi.rb: show title in the prev/next month.
	* tdiary.conf.sample*: remove comment mail setting.

2003-08-05 TADA Tadashi <sho@spc.gr.jp>
	* remove plugin/edit.rb.
	* release 1.5.5.

2003-05-18 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: call apply_plugin begore shorten.

2003-05-15 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.4.

2003-05-04 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: no use SERVER_PORT.

2003-05-03 TADA Tadashi <sho@spc.gr.jp>
	* add BlogRD style.

2003-04-25 TADA Tadashi <sho@spc.gr.jp>
	* recent-entry, recent-entry2, whatnew-list: remove 2nd parameter and support @options['apply_plugin'].
	* whatsnew-list: RSS feed support. thanks Kazuhiro NISHIYAMA <zn@mbf.nifty.com>.

2003-04-15 TADA Tadashi <sho@spc.gr.jp>
	* add blog-style_ja.rb plugin for Japanese labels.
	* add tdiary.conf.sample_ja.

2003-03-03 TADA Tadashi <sho@spc.gr.jp>
	* fix typo.

2003-02-23 TADA Tadashi <sho@spc.gr.jp>
	* BlogWiki style: fix bugs of blockquote grammer.
	* release 1.5.3.

2003-02-21 TADA Tadashi <sho@spc.gr.jp>
	* BlogWiki style: modify blockquote grammar.
	* modify TDiaryForm class only runnning on Blog mode.

2003-02-20 TADA Tadashi <sho@spc.gr.jp>
	* add BlogWiki style.

2003-02-13 TADA Tadashi <sho@spc.gr.jp>
	* follow to tDiary 1.5.2.20030212.

2003-02-12 TADA Tadashi <sho@spc.gr.jp>
	* document bugs fixed.

2003-01-27 TADA Tadashi <sho@spc.gr.jp>
	* support style: remove blogio.rb and add blog_style.rb. see UPDATE.

2003-01-08 TADA Tadashi <sho@spc.gr.jp>
	* archive.rb: insert <div> into <form> in archive_dropdown.

2003-01-01 TADA Tadashi <sho@spc.gr.jp>
	* README.en: update. thanks Mizuho <gha@intrastore.cdc.com>.

2002-12-25 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.2.

2002-12-24 TADA Tadashi <sho@spc.gr.jp>